scripts/all-in-one/gemeni/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: davtro
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: baseline
