scripts/all-in-one/gemeni/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/06-kafka-kraft.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: davtro
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: kafka
        image: bitnami/kafka:3.5
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: davtro
spec:
  ports:
  - port: 9092
    name: plaintext
  selector:
    app: kafka
