scripts/all-in-one/gemeni/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/08-vault.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: davtro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
      - name: vault
        image: hashicorp/vault:1.15
        securityContext:
          capabilities:
            add: ["IPC_LOCK"]
        ports:
        - containerPort: 8200
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: davtro
spec:
  ports:
  - port: 8200
  selector:
    app: vault
