scripts/all-in-one/gemeni/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/09-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  namespace: davtro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      serviceAccountName: fastapi-sa
      containers:
      - name: fastapi
        image: ghcr.io/exea-centrum/fastapi-app:v1.0.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
  namespace: davtro
spec:
  ports:
  - port: 8000
  selector:
    app: fastapi-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-processor
  namespace: davtro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: message-processor
  template:
    metadata:
      labels:
        app: message-processor
    spec:
      serviceAccountName: message-processor-sa
      containers:
      - name: processor
        image: ghcr.io/exea-centrum/message-processor:v1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: message-processor
  namespace: davtro
spec:
  ports:
  - port: 8080
  selector:
    app: message-processor
