scripts/all-in-one/gemeni/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/10-spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: davtro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      serviceAccountName: spring-app-sa
      containers:
      - name: spring
        image: ghcr.io/exea-centrum/spring-app:v1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: davtro
spec:
  ports:
  - port: 8080
  selector:
    app: spring-app
