scripts/all-in-one/gemeni/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/11-spark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: davtro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      serviceAccountName: spark-sa
      containers:
      - name: spark-master
        image: bitnami/spark:3.4
        ports:
        - containerPort: 7077
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spark-master
  namespace: davtro
spec:
  ports:
  - port: 7077
    name: cluster
  - port: 8080
    name: webui
  selector:
    app: spark-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: davtro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: bitnami/spark:3.4
